welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:7: error: ')' expected but 'else' found.
  	} else {
          ^alarmClock:15: error: ')' expected but 'else' found.
  	} else{
          ^alarmClock:21: error: Unmatched closing brace '}' ignored here
 }
 ^